# flashrom

./: .gitattributes  .gitignore  82802ab.c  COPYING.rst  Doxyfile  MAINTAINERS  Makefile  Makefile.include  README  README.md  README.rst  VERSION  a25.c  acpi_ec.c  acpi_ec.h  am29f040b.c  amd_imc.c  arch.h  archtest.c  asm106x.c  ast1100.c  ast2400.c  at25.c  at45db.c  atahpt.c  atapromise.c  atavia.c  bch.c  bitbang_spi.c  board_enable.c  buspirate_spi.c  cbtable.c  ch341a_spi.c  ch347_spi.c  chipdrivers.h  chipset_enable.c  cli_classic.c  cli_common.c  cli_getopt.c  cli_output.c  (+162 more)
.github/: Dockerfile  build-alma-rpms.sh  flashrom.spec
.github/workflows/: build-alma-rpms.yml  build_on_push.yml  lockdown.yml  release.yml
Documentation/: building.md  mysteries_intel.txt  serprog-protocol.txt
Makefile.d/: arch_test.h  cc_test.c  clock_gettime_test.c  endian_test.h  ft232h_test.c  getopt_test.c  linux_i2c_test.c  linux_mtd_test.c  linux_spi_test.c  os_test.h  pci_old_get_dev_test.c  pciutils_test.c  utsname_test.c
bindings/rust/: README
bindings/rust/libflashrom/: Cargo.toml  build.rs
bindings/rust/libflashrom-sys/: Cargo.toml  build.rs
bindings/rust/libflashrom-sys/src/: lib.rs
bindings/rust/libflashrom/src/: lib.rs  log.c
doc/: classic_cli_manpage.rst  collect-authors.sh  conf.py  contact.rst  documentation_license.rst  how_to_add_docs.rst  how_to_support_flashrom.rst  index.rst  intro.rst  meson.build  sphinx-wrapper.sh
doc/_ext/: .gitignore  flashrom_authors.py
doc/about_flashrom/: code_of_conduct.rst  hall_of_fame.rst  index.rst  license.rst  privacy_policy.rst  team.rst
doc/contrib_howtos/: how_to_add_new_chip.rst  how_to_add_unit_test.rst  how_to_mark_chip_tested.rst  index.rst  laptops_and_ec.rst
doc/contrib_howtos/board_enable/: board_testing_howto.rst  index.rst  overview.rst  reverse_engineering.rst
doc/dev_guide/: building_from_source.rst  building_with_make.rst  development_guide.rst  index.rst  release_process.rst
doc/logo/: COPYING  flashrom_icon_color-16x16.xcf  flashrom_icon_color-32x32.xcf  flashrom_icon_color-64x64.xcf
doc/release_notes/: devel.rst  index.rst  v_1_3.rst  v_1_4.rst  v_1_5.rst  v_1_6.rst  v_1_7.rst
doc/supported_hw/: index.rst  supported_boards.rst  supported_chipsets.rst  supported_flashchips.rst
doc/supported_hw/supported_prog/: buspirate.rst  ch341ab.rst  dummyflasher.rst  ft2232_spi.rst  index.rst
doc/supported_hw/supported_prog/serprog/: arduino_flasher.rst  arduino_flasher_3.3v.rst  index.rst  overview.rst  serprog-protocol.rst  teensy_3_1.rst
doc/user_docs/: chromebooks.rst  example_partial_wp.rst  fw_updates_vs_spi_wp.rst  in_system.rst  index.rst  management_engine.rst  misc_intel.rst  misc_notes.rst  msi_jspi1.rst  overview.rst  raspberry_pi.rst
flashchips/: amd.c  amic.c  atmel.c  boya_bohong.c  bright.c  catalyst.c  ene.c  eon.c  esi.c  esmt.c  fudan.c  fujitsu.c  gigadevice.c  hyundai.c  intel.c  issi.c  macronix.c  micron.c  micron_numonyx_st.c  mosel_vitelic.c  nantronics.c  pmc.c  puya.c  sanyo.c  sharp.c  spansion.c  sst.c  st.c  syncmos_mosel_vitelic.c  ti.c  winbond.c  xmc.c  xtx.c  zbit.c  zetta.c
include/: bch.h  chipdrivers.h  cli_classic.h  cli_getopt.h  cli_output.h  coreboot_tables.h  custom_baud.h  dmi.h  edi.h  ene.h  erasure_layout.h  flash.h  flashchips.h  fmap.h  helpers.h  hwaccess_physmap.h  hwaccess_x86_io.h  hwaccess_x86_msr.h  i2c_helper.h  ich_descriptors.h  layout.h  libflashrom.h  log.h  par_mmio.h  parallel.h  pcidev.h  platform.h  programmer.h  read_extended.h  rpmc.h  serial.h  spi.h  spi_nand.h  usb_device.h  usbdev.h  writeprotect.h
include/platform/: endian.h  i2c.h  pci.h  string.h  swap.h  udelay.h
libmcp2210/: hid.h  hid_linux.c  libmcp2210.c  libmcp2210.h
meson_cross/: i386_lpgcc_libpayload.txt  i586_djgpp_dos.txt
platform/: endian_big.c  endian_common.c  endian_little.c  i2c_linux.c  memaccess.c  meson.build  pci.h  string.c  udelay.c  udelay_dos.c  udelay_libpayload.c  udelay_windows.c
programmers/: asm106x.c  atahpt.c  atapromise.c  atavia.c  buspirate_spi.c  ch341a_spi.c  ch347_spi.c  dediprog.c  developerbox_spi.c  digilent_spi.c  dirtyjtag_spi.c  drkaiser.c  dummyflasher.c  fault.c  ft2232_spi.c  gfxnvidia.c  internal.c  it8212.c  it87spi.c  jlink_spi.c  linux_mtd.c  linux_spi.c  mediatek_i2c_spi.c  mstarddc_spi.c  ni845x_spi.c  nic3com.c  nicintel.c  nicintel_eeprom.c  nicintel_spi.c  nicnatsemi.c  nicrealtek.c  nv_sma_spi.c  ogp_spi.c  par_mmio.c  parade_lspcon.c  pickit2_spi.c  pony_spi.c  raiden_debug_spi.c  rayer_spi.c  realtek_mst_i2c_spi.c  (+6 more)
scripts/: llvm-cov
subprojects/: .gitignore  cmocka.wrap
subprojects/packagefiles/cmocka-1.1.5/: meson.build
subprojects/packagefiles/cmocka-1.1.5/private/: meson.build
subprojects/packagefiles/cmocka-1.1.5/private_native/: meson.build
subprojects/packagefiles/cmocka-1.1.5/src/: meson.build
subprojects/packagefiles/cmocka-1.1.8/: meson.build
tests/: ch341a_spi.c  ch347_spi.c  chip.c  chip_wp.c  client_tests.c  client_tests.h  dediprog.c  dummyflasher.c  erase_func_algo.c  external_client.c  fault.c  flashrom.c  helpers.c  hwaccess_x86_io_unittest.h  i2c_helper.c  init_shutdown.c  io_mock.c  io_mock.h  io_real.c  io_real.h  layout.c  libflashrom.c  libusb_wraps.c  libusb_wraps.h  lifecycle.c  lifecycle.h  linux_mtd.c  linux_spi.c  mediatek_i2c_spi.c  meson.build  nicrealtek.c  nv_sma_spi.c  parade_lspcon.c  probe_spi.c  raiden_debug_spi.c  realtek_mst_i2c_spi.c  selfcheck.c  spi25.c  spidriver.c  tests.c  (+5 more)
tests/include/: test.h
util/: convert_layout_v1_to_v2.sh  flashrom.bash-completion.tmpl  flashrom_partial_write_test.sh  flashrom_udev.rules  getrevision.sh  getversion.sh  list_yet_unsupported_chips.sh  meson.build  shell.nix  z60_flashrom.rules
util/flashrom_tester/: Cargo.toml  flashrom_remote.sh
util/flashrom_tester/flashrom/: Cargo.toml
util/flashrom_tester/flashrom/src/: cmd.rs  flashromlib.rs  lib.rs
util/flashrom_tester/src/: cros_sysinfo.rs  lib.rs  logger.rs  main.rs  rand_util.rs  tester.rs  tests.rs  types.rs  utils.rs
util/git-hooks/: applypatch-msg  commit-msg  (+5 more)
(+25 files in other folders)
